# UNR

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: CMakeLists.txt  Doxyfile
fast/: build.sh  env.sh  run.sh
scripts/: get_gid_idx.sh
src/: CMakeLists.txt
src/tools/: CMakeLists.txt  glex_bind  uri_info.c
src/unr/: CMakeLists.txt
src/unr/api/: CMakeLists.txt  unr.h
src/unr/base/: CMakeLists.txt  unr_blk.c  unr_channel.c  unr_def.h  unr_mem.c  unr_sig.c
src/uri/: CMakeLists.txt
src/uri/api/: uri.h
src/uri/base/: CMakeLists.txt  uri_channel.c  uri_def.h  uri_mem.c  uri_rdma.c
src/uri/glex/: CMakeLists.txt
src/uri/mpi/: CMakeLists.txt  uri_mpi.h  uri_mpi_channel.c  uri_mpi_mem.c  uri_mpi_rdma.c  uri_mpi_utils.c
src/uri/verbs/: CMakeLists.txt  uri_verbs.h  uri_verbs_channel.c  uri_verbs_mem.c  uri_verbs_rdma.c  uri_verbs_utils.c
src/uru/: CMakeLists.txt
src/uru/dev/: CMakeLists.txt  dev.h  trace.c  trace.h
src/uru/mpi/: CMakeLists.txt  mpi.c  mpi.h
src/uru/sys/: CMakeLists.txt  preprocessor.h  realloc.c  realloc.h  time.c  time.h
src/uru/type/: CMakeLists.txt  flag.c  flag.h  queue.c  queue.h  status.c  uru_status.h
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  MPI_RMA_PSCW_lat.c  MPI_RMA_PSCW_lat_overlap.c  alltoallv.c  pingpong.c  pingpong2.c  pingpong4.c
tests/channel/mpi/: 01_max_irecv.c  CMakeLists.txt
tests/unr/: 01_unr_init.c  02_unr_mem_reg.c  03_unr_mem_reg_sync.c  04_unr_blk_reg.c  11_unr_blk_rdma_plan.c  12_unr_blk_rdma_plan_2start.c  13_unr_blk_rdma_plan_2destroy.c  14_unr_blk_rdma_start.c  21_unr_blk_rdma_batch_plan.c  22_unr_blk_rdma_batch_plan_2start.c  23_unr_blk_rdma_batch_plan_2destroy.c  24_unr_blk_rdma_batch_start.c  31_unr_blk_part_rdma_plan.c  32_unr_blk_part_rdma_plan_2start.c  33_unr_blk_part_rdma_plan_2destroy.c  34_unr_blk_part_rdma_start.c  41_unr_blk_part_rdma_batch_plan.c  42_unr_blk_part_rdma_batch_plan_2start.c  43_unr_blk_part_rdma_batch_plan_2destroy.c  44_unr_blk_part_rdma_batch_start.c  45_unr_blk_part_rdma_batch_sync_late.c  51_unr_sig_check_with_create1.c  52_unr_sig_check_with_create2.c  53_unr_sig_reset.c  54_unr_sig_pool_create_and_detect.c  55_unr_overflow_detect.c  CMakeLists.txt
tests/uri/: 01_uri_channel_find.c  02_uri_channel_open_and_close.c  03_uri_mem_reg.c  04_uri_rdma_plan_create_0.c  05_uri_rdma_plan_create_1.c  06_uri_rdma_plan_start.c  07_uri_rdma_plan_destroy.c  CMakeLists.txt
